test/should-fail/badnumbers.f3
/**
 * Ensure that integers that are too large are caught by the lexer and do not cause a compiler abort
 * @test/compile-error
 */

var bigone = 999999999999999999999999999999999999999999999999999999;
var smallone = -99999999999999999999999999999999999999999999999999999;
